update ingestion service, get , delete, post and rule repo
